--- a/app/views/homepages/meet_the_team.html.erb
+++ b/app/views/homepages/meet_the_team.html.erb
@@ -6,22 +6,22 @@
 
   <br>
 
-  <section class="team-members">
+  <section class="team-members grid-container">
 
     <section class="bio">
-      <%= image_tag("https://visualhunt.com/photos/1/puppy-sitting-on-tiled-floor.jpg?s=l") %>
+      <%= image_tag("https://i.imgur.com/S8345XG.jpg") %>
       <h3>Charlotte</h3>
       <p>Short bio goes here !!!!</p>
     </section>
 
     <section class="bio">
-      <%= image_tag("https://visualhunt.com/photos/1/puppy-sitting-on-tiled-floor.jpg?s=l") %>
+      <%= image_tag("https://i.imgur.com/bdfAkTy.jpeg") %>
       <h3>Katie</h3>
       <p>Short bio goes here !!!!</p>
     </section>
 
       <section class="bio">
-      <%= image_tag("https://visualhunt.com/photos/1/puppy-sitting-on-tiled-floor.jpg?s=l") %>
+      <%= image_tag("https://i.imgur.com/QRtNOqF.jpeg") %>
       <h3>Mair</h3>
       <p>Short bio goes here !!!!</p>
     </section>
