--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -107,6 +107,27 @@ h1, h2 {
     padding-bottom: 2rem;
 }
 
+//my account 
+
+.merchant_name {
+    padding-bottom: 0;
+    text-align: center;
+    margin-bottom: 0.5rem;
+}
+.merchant_date {
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+    padding-bottom: 5rem;
+}
+.merchant_buttons ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style-type: none;
+    margin-bottom: 1rem;
+}
+
 // Footer
 
 footer {
