featured centered product

--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -1,12 +1,11 @@
 <section id="homepage-hero-image">
-    <div class="hero-image d-md-block">
+    <div class="hero-image">
         <img src="https://i.imgur.com/ACNTG1b.jpg" />
         <div class="hero-text">
             <h1>Only the Best for Your Best Friend</h1>
         </div>
     </div>
 </section>
-<hr>
 
 <section id="homepage-products" class ="padded-container">
     <h2>Discover Paw-mazing Deals</h2>
@@ -15,14 +14,18 @@
 </section>
 <hr>
 
-<section id="homepage-featured" class ="padded-container">
-    <h2>Featured Product</h2>
-    <% if !@products.empty?%>
-        <% featured = Product.spotlight(@products)%>
-        <%= render partial: "layouts/product_card", locals:{product:featured}%>
-    <% else%>
-        <h3>Coming Soon</h3>
-    <% end%>
+<section id="homepage-featured" class ="padded-container featured">
+   
+        <h2 class="center-text">Featured Product</h2>
+        <% if !@products.empty?%>
+            <div class ="center">
+                <% featured = Product.spotlight(@products)%>
+                <%= render partial: "layouts/product_card", locals:{product:featured}%>
+            </div>
+        <% else%>
+            <h3>Coming Soon</h3>
+        <% end%>
+   
 </section>
 <hr>
 
