--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,19 @@ body {
     padding: 4rem;
 }
 
+.center {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.center-text {
+    text-align: center;
+}
+
+.center h2 {
+    text-align: center;
+}
+
 h1, h2 {
     font-size: 3rem;
     font-family: 'Lato', sans-serif;
