--- a/app/views/homepages/meet_the_team.html.erb
+++ b/app/views/homepages/meet_the_team.html.erb
@@ -27,7 +27,7 @@
     </section>
 
       <section class="bio">
-      <%= image_tag("https://visualhunt.com/photos/1/puppy-sitting-on-tiled-floor.jpg?s=l") %>
+      <%= image_tag("https://i.imgur.com/EcgTkMB.jpg") %>
       <h3>Yoyo</h3>
       <p>Short bio goes here !!!!</p>
     </section>
