meet team page updates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -198,4 +198,12 @@ footer {
     width: 800px;
 
   }
+
+  .meet-team-footer a{
+    color: white;
+  }
+  
+  .meet-team-footer{
+    text-align: center;
+  }
   
