--- a/app/views/homepages/meet_the_team.html.erb
+++ b/app/views/homepages/meet_the_team.html.erb
@@ -1,7 +1,7 @@
 <section class="meet-the-team-page">
   <section class="team-header">
     <h1 class="meet-team">Meet the Petsy Team</h1>
-    <h4><em>Something cute here lol</em></h4>
+    <h4><em>Meet the team—and more importantly the dogs—behind p3tsy.</em></h4>
   </section>
 
   <br>
@@ -11,25 +11,25 @@
     <section class="bio">
       <%= image_tag("https://i.imgur.com/S8345XG.jpg") %>
       <h3>Charlotte</h3>
-      <p>Short bio goes here !!!!</p>
+      <p>DogWear Engineer: For the love of computer software and dogs!</p>
     </section>
 
     <section class="bio">
       <%= image_tag("https://i.imgur.com/bdfAkTy.jpeg") %>
       <h3>Katie</h3>
-      <p>Short bio goes here !!!!</p>
+      <p>Back end developer and human to Louie, the real MVP</p>
     </section>
 
       <section class="bio">
-      <%= image_tag("https://i.imgur.com/QRtNOqF.jpeg") %>
+      <%= image_tag("https://i.imgur.com/N1qa5CR.jpeg") %>
       <h3>Mair</h3>
-      <p>Short bio goes here !!!!</p>
+      <p>Head of Mess Development: pup love is the best kind of love</p>
     </section>
 
       <section class="bio">
       <%= image_tag("https://i.imgur.com/EcgTkMB.jpg") %>
       <h3>Yoyo</h3>
-      <p>Short bio goes here !!!!</p>
+      <p>Front end engineer and owner of Bonnie and Clyde</p>
     </section>
 
   </section>
