--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,6 +86,10 @@
 		<%= yield %>
 		<footer>
 		<div class="padded-container">
+		<div class="meet-team-footer">
+				<%= link_to "Meet the Team", meet_the_team_path %>
+
+		</div>
 		<%# add columns of info %>
 		</div>
 		<div class="copyright">
