added filter to my orders page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,9 +8,9 @@
 				<h2> <%= @product.name%>
 					<h2>
 						<h6>  <%= @product.description %> </h6>
-						<p> $ <%= @product.price%> </p>
+						<p> $<%= @product.price%> </p>
 						<p> <%= @product.stock %> currently in stock</p>
-						<p> Status: <%= @product.product_status %> </p>
+						<p> <strong>Status:</strong> <%= @product.product_status %> </p>
 					</div>
 				</div>
 			</section>
