meet the team bio changes

--- a/app/views/homepages/meet_the_team.html.erb
+++ b/app/views/homepages/meet_the_team.html.erb
@@ -11,25 +11,25 @@
     <section class="bio">
       <%= image_tag("https://i.imgur.com/S8345XG.jpg") %>
       <h3>Charlotte</h3>
-      <p>DogWear Engineer: For the love of computer software and dogs!</p>
+      <p>Principal Information Bark-itect</p>
     </section>
 
     <section class="bio">
       <%= image_tag("https://i.imgur.com/bdfAkTy.jpeg") %>
       <h3>Katie</h3>
-      <p>Back end developer and human to Louie, the real MVP</p>
+      <p>Paw-ject Manager</p>
     </section>
 
       <section class="bio">
       <%= image_tag("https://i.imgur.com/N1qa5CR.jpeg") %>
       <h3>Mair</h3>
-      <p>Head of Mess Development: pup love is the best kind of love</p>
+      <p>Head of Mess Development</p>
     </section>
 
       <section class="bio">
       <%= image_tag("https://i.imgur.com/EcgTkMB.jpg") %>
       <h3>Yoyo</h3>
-      <p>Front end engineer and owner of Bonnie and Clyde</p>
+      <p>Chief User Pet-sperience Engineer</p>
     </section>
 
   </section>
