--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -178,6 +178,7 @@ footer {
     background-color: pink;
     color: whitesmoke;
     margin: 0 200px;
+    margin-top: 30px;
     padding-bottom: 30px;
     padding-top: 30px;
 }
